--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
   "dependencies": {
     "commander": "^12.0.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "joi": "^17.13.0",
+    "mongodb": "^6.5.0",
+    "mongoose": "^8.3.2",
     "morgan": "^1.10.0",
     "nanoid": "^5.0.7"
   },
