--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   "type": "module",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "commander": "^12.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "joi": "^17.13.0",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.2",
+    "mongoose-paginate-v2": "^1.8.0",
     "morgan": "^1.10.0",
     "nanoid": "^5.0.7"
   },
