--- a/.gitignore
+++ b/.gitignore
@@ -130,3 +130,9 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+
+tmp/*
+!tmp/.gitkeep
+.public/avatars/*
+!public/avatars/.gitkeep
