--- a/package.json
+++ b/package.json
@@ -2,15 +2,19 @@
   "name": "goit-node-rest-api",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
-    "start:dev": "nodemon app.js"
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
+    "test:watch": "jest --watch",
+    "start:dev": "nodemon server.js",
+    "dev": "node --watch server.js"
   },
   "keywords": [],
   "author": "",
   "type": "module",
   "license": "ISC",
   "dependencies": {
+    "@types/jest": "^29.5.12",
     "bcrypt": "^5.1.1",
     "commander": "^12.0.0",
     "cors": "^2.8.5",
@@ -28,6 +32,8 @@
     "nanoid": "^5.0.7"
   },
   "devDependencies": {
-    "nodemon": "^3.1.0"
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.0",
+    "supertest": "^7.0.0"
   }
 }
