--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-joi-validation": "^5.0.1",
     "gravatar": "^1.8.2",
     "jimp": "^0.22.12",
     "joi": "^17.13.0",
+    "joi-objectid": "^4.0.2",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.2",
