--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "type": "module",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^8.1.3",
     "@types/jest": "^29.5.12",
     "bcrypt": "^5.1.1",
     "commander": "^12.0.0",
