--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,5 @@ PORT=number of port
 DB_HOST=database uri
 DB_URI_TEST=db test uri
 SECRET_KEY=secret key to create token
+GOOGLE_AUTH_CLIENT_ID=
+GOOGLE_AUTH_CLIENT_SECRET=
