--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "test:watch": "jest --watch",
     "start:dev": "nodemon server.js",
-    "dev": "node --watch server.js"
+    "dev": "node --watch server.js",
+    "build": "npm run build-docs",
+    "build-docs": "redocly bundle --ext json -o docs/swagger.json",
+    "preview-docs": "redocly preview-docs"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +24,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-joi-validation": "^5.0.1",
+    "google-auth-library": "^9.11.0",
     "gravatar": "^1.8.2",
     "jimp": "^0.22.12",
     "joi": "^17.13.0",
@@ -34,6 +38,7 @@
     "nanoid": "^5.0.7"
   },
   "devDependencies": {
+    "@redocly/cli": "^1.16.0",
     "jest": "^29.7.0",
     "nodemon": "^3.1.0",
     "supertest": "^7.0.0"
