--- a/swagger/components/schemas/contacts.yaml
+++ b/swagger/components/schemas/contacts.yaml
@@ -20,4 +20,4 @@ properties:
   email:
     description: "Contact's age"
     type: string
-    enum: "example@gmail.com"
+    example: "example@gmail.com"
