--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "mongoose-paginate-v2": "^1.8.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "nanoid": "^5.0.7"
+    "nanoid": "^5.0.7",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "@redocly/cli": "^1.16.0",
